Closed
Bug 291390
Opened 21 years ago
Closed 21 years ago
Failure opening bookmarks menuitem
Categories
(Core :: XUL, defect)
Core
XUL
Tracking
()
RESOLVED
FIXED
People
(Reporter: ShareBird, Assigned: roc)
References
Details
(Keywords: regression, testcase)
Attachments
(4 files)
|
13.51 KB,
text/html
|
Details | |
|
4.24 KB,
application/vnd.mozilla.xul+xml
|
Details | |
|
10.92 KB,
application/vnd.mozilla.xul+xml
|
Details | |
|
7.98 KB,
patch
|
bzbarsky
:
review+
bzbarsky
:
superreview+
asa
:
approval1.8b2+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8b2) Gecko/20050410 Firefox/1.0+
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8b2) Gecko/20050420 Firefox/1.0+
If you have a long list of bookmarks (around 80) and a folder at the end of this
list, its contents will not be accessible through bookmarks menu at main menu,
a menuitem will not popup if you scroll down until this folder. I guess this
menuitem will popup in a wrong position like the testcase demonstrate.
This issue started with Build 20050405. Build 20050404 works as expected.
Reproducible: Always
Steps to Reproduce:
1.Use "Bookmarks -> Manage Bookmarks..." to import the attached bookmark file
2.Go to Bookmarks menu at main menu
3.Open the "Test Case" folder
4.Point the mouse over the "Folder 00". A menuitem will normally popup.
5.Scroll down to "Folder 01", "Folder 02", "Folder 03" and "Folder 04". "Folder
04 will not popup its contents...
6.Scroll up to "Folder 03", "Folder 02" and "Folder 01".
Actual Results:
Abnormal behaviour from menuitem popup.
Expected Results:
Mouse pointing folders at bookmarks menu should popup menuitem with its contents
normally.
| Reporter | ||
Comment 1•21 years ago
|
||
| Reporter | ||
Updated•21 years ago
|
Comment 2•21 years ago
|
||
This testcase shows that this is not specific to bookmarks. I suspect the
product and component should be updated accordingly but I am unsure exactly
what they should be.
Updated•21 years ago
|
Status: UNCONFIRMED → NEW
Ever confirmed: true
Comment 3•21 years ago
|
||
check this test
Comment 4•21 years ago
|
||
Comment on attachment 181507 [details]
another testcase
maybe this bug related to the showPopup position bug, look at User Contributed
Notes in xulplanet Popup about this issue
Comment 5•21 years ago
|
||
Bonsai for that range shows bug 256505 as a possible cause.
Assignee: vladimir+bm → nobody
Severity: major → normal
Component: Bookmarks → XP Toolkit/Widgets: Menus
Keywords: regression
Product: Firefox → Core
QA Contact: mconnor
Version: unspecified → Trunk
Comment 6•21 years ago
|
||
Bug 291083 is 1.9-era work, so it's not really a blocker for fixing this regression.
I don't know what the hours on the builds in comment 0 were (you really want to
include those, not just the date), but build 2005-04-05-06 works fine. Build
2005-04-06-06 is broken.
Tried backing out bug 256505, and that fixed the issue here...
| Assignee | ||
Comment 7•21 years ago
|
||
nsMenuPopupFrame does all this work to calculate view offsets that I think is
entirely unnecessary. I don't know why it wants to ignore the offsets of some
scrolled views. If I replace this with the obvious simple code, things seem to
work (nested menus, menus near screen boundaries, etc) and in particular this
bug is fixed. In particular, context menus in scrolled documents work. Anything
else I might have forgotten to test?
Attachment #181818 -
Flags: superreview?(bzbarsky)
Attachment #181818 -
Flags: review?(bzbarsky)
Comment 8•21 years ago
|
||
Comment on attachment 181818 [details] [diff] [review]
fix
r+sr=bzbarsky, but one thing you should test is a XUL menu inside a scrolled
document. That should exercise that second chunk of code (where we're aligning
to a frame); context menus do not exercise it.
Attachment #181818 -
Flags: superreview?(bzbarsky)
Attachment #181818 -
Flags: superreview+
Attachment #181818 -
Flags: review?(bzbarsky)
Attachment #181818 -
Flags: review+
| Assignee | ||
Comment 9•21 years ago
|
||
Yeah, that works.
| Assignee | ||
Comment 10•21 years ago
|
||
Comment on attachment 181818 [details] [diff] [review]
fix
fixes menu regression and simplifies the menu code a lot.
Attachment #181818 -
Flags: approval1.8b2?
Comment 11•21 years ago
|
||
Comment on attachment 181818 [details] [diff] [review]
fix
a=asa
Attachment #181818 -
Flags: approval1.8b2? → approval1.8b2+
| Assignee | ||
Comment 12•21 years ago
|
||
checked in
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Updated•21 years ago
|
Flags: blocking1.8b2?
Comment 13•21 years ago
|
||
*** Bug 293213 has been marked as a duplicate of this bug. ***
Component: XP Toolkit/Widgets: Menus → XUL
QA Contact: xptoolkit.widgets
You need to log in
before you can comment on or make changes to this bug.
Description
•