Bug 291390. Don't do hairy view calculations in menu popups ... do it the simple way which seems to actually work. In particular we should take all scroll offsets into account. r+sr=bzbarsky,a=asa